Log ignoring deletes